# mydiabby-client

./: .gitignore  README.md  account_data.json  data_structure.md  json_test.py  pyproject.toml
mydiabby-client/: client.py
mydiabby_client/: client.py
