[project]
name = "mydiabby-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/NoahFontaine/mydiabby-client"
Issues = "https://github.com/NoahFontaine/mydiabby-client/issues"